fixed display question text visibility

--- a/todoApp/styles.css
+++ b/todoApp/styles.css
@@ -86,7 +86,7 @@ input[type="checkbox"]+label {
 }
 
 input[type="checkbox"] {
-    display: none;
+    opacity: 0;
 }
 
 label {
@@ -102,8 +102,12 @@ input[type="checkbox"]+label span {
     vertical-align: middle;
     width: 35px;
     height: 35px;
-    border: 2px solid #e1e1e1;
+    border: 2px solid #ccc;
     background: #f4f4f4;
+}
+
+input[type="checkbox"]:hover+label span {
+    background-color: #fff;
 }
 
 input[type="checkbox"]+label span::before {
@@ -116,10 +120,15 @@ input[type="radio"]+label span {
 }
 
 input[type="checkbox"]:hover+label span::before {
-    content: "✓";
+    content: "";
+    height: 16px;
+    width: 30px;
+    border-left: 6px solid;
+    border-bottom: 6px solid;
+    margin-top: .1em;
+    transform: rotate(-45deg);
     color: #e67e21;
     text-align: center;
-    font-size: 25px;
 }
 
 .vh {
